<resources>
    <string name="app_name">USClassifieds</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="seller">Seller</string>
    <string name="send_button">Send Info</string>
    <string name="textview">Text View</string>
    <string name="textview2">Text View 2</string>
    <string name="textview3">Text View 3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_name">Item Seller</string>
    <string name="label_phone">Price</string>
    <string name="label_website">Website</string>
    <string name="label_address">Location</string>
    <string name="label_city">Description</string>
    <string name="label_state">State</string>
    <string name="label_zip">Title</string>
    <string name="label_rating">Rating</string>
    <string name="label_save">Save</string>
    <string name="label_welcome">Find cheap items sold by fellow Trojans!</string>
    <string name="label_add">Sell</string>
    <string name="label_delete">Delete</string>
<<<<<<< HEAD
    <string name="title_activity_login_page">LoginPage</string>
=======
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
>>>>>>> 9e98fd921e141a4332065555d93d14a2810d5b9e
</resources>
